--- a/login.html
+++ b/login.html
@@ -97,7 +97,9 @@
        body{
            background-color:black;
        }
-        
+        form{
+            background-color:white;
+        }
     </style>
 </head>
 <body>                                     
