--- a/login.html
+++ b/login.html
@@ -24,7 +24,8 @@
             height: 500px;
             width: 470px;
             margin-top: 60px;
-            margin-left: 400px
+            margin-left: 400px;
+             background-color:white;
         }
        #pn{
         font-size: x-large;
@@ -97,9 +98,7 @@
        body{
            background-color:black;
        }
-        form{
-            background-color:white;
-        }
+        
     </style>
 </head>
 <body>                                     
